Revising slpCOVIS.Rd for accuracy and clarity (incomplete).
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/catlearn@137 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/andy_howto.org
+++ b/andy_howto.org
@@ -164,3 +164,8 @@ to merge your branch back into the trunk.
 All the best
 
 Andy
+
+* General notes
+
+- Only keep in the R-forge SVN that which you intend to include in the
+  package release. 
