Unit test for stsimGCM.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/catlearn@296 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/andy_howto.org
+++ b/andy_howto.org
@@ -216,3 +216,8 @@ Andy
 
 
 
+** stsimGCM
+- I've selected your version for the mainline code; Paul Minda didn't
+  share any code by the code freeze deadline.
+- I made some formatting changes to the Rd file, shortening a bit,
+  putting some things in notes, and removing direct quotes.
