Updated man page for nosof94train to specify meaning of stimulus numbers (SUSTAIN branch).
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/catlearn@339 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/branches/sustain-branch/andy-notes.org
+++ b/branches/sustain-branch/andy-notes.org
@@ -136,3 +136,5 @@ differences between implementations, this might explain that.
 DON'T try and fix this inside slpSUSTAIN. The easiest solution is to
 turn the response probability on each trial 
 
+** NOTE: How good can block 1 be?
+
