Working on slpEXIT.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/catlearn@362 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/branches/exit-branch/notes-to-rs.org
+++ b/branches/exit-branch/notes-to-rs.org
@@ -245,3 +245,10 @@ close enough, though. Hopefully because...
 numbers as Kruschke (2001), not just similar ones. And that'll require
 simulations averaged across multiple randomized training
 runs. Kruschke (2003) used 40 runs.
+
+** Creating krus96train
+- catlearn style rules - max column width 80, use spaces to separate code wihtin a line 
+
+- trainingitems line can be coded more simply, see code.
+
+
