--- a/branches/exit-branch/notes-to-rs.org
+++ b/branches/exit-branch/notes-to-rs.org
@@ -206,49 +206,55 @@ category/categories.
   function and attempts to reproduce the results in Table 3 (with the
   parameters Kruschke defines).
 * Notes on latest version
+Some good work you've done here! But I'm afraid it's not ready for
+release yet, and I need your help to get it there. To explain...
 
-+ slpEXIT:
+I developed your code to create a training array for Kruschke (1996)
+into the function krus96train() -- good to keep things modular. I've
+also written an .Rd file for this function.
+
+I then used this to adapt your Kruschek2001aExp1.R into
+Kruschke2001aExp1aw.R, which goes a bit further than your
+code. Specifically, it averages across about 50 simulated subjects and
+automatically displays any result which is more than .05 out from the
+simulation reported by Kruschke (2001). This is quite a large
+discrepancy, and they stably appear across multiple runs of this
+script for four of the abstractly-coded test items (change the seed
+value and re-run to confirm this for yourself). Anything .02 different
+or above is probably caused by your simulation or Kruschke's being
+different in some way.
+
+The four that are wrong (relative to the reported simulation) are
+PC.PR, I.PC.PR, PC.PRo, and I.PC.PRo -- so anything that assesses the
+IBRE, and the difference is that the IBRE is about 0.08 smaller in
+your simulation than in Kruschke's. 
+
+My guess is that the most likely source of error is in the attentional
+allocation system, and if I had to place a bet, I'd say something to
+do with the 10-iteration process, but it's possible it's something
+else, either in attention, or (perhaps slightly less likely) somewhere
+else.
+
+Anyway, please could you take a look and see if you can fix it to the
+point where you're getting the same results as Kruschke? 
+
+Some further notes on other things I noticed along the way:
 
 + slpEXIT is searching for -1 for an absent category in tr. It should
   be searching for 0. Luckily, the code copes, but best to fix for
   clarity. 
 
-+ The operation of 'ctrl' differs from other models. Your =3 is the
-  operation usually defined as =1. We'll need to switch those over.
++ The operation of 'ctrl' in slpEXIT differs from other slp
+  models. Your =3 is the operation usually defined as =1 (i.e. reset
+  to state defined in st). You'll need to switch those over.
 
-+ The Kruschke 1996 training array:
++ catlearn style rules - max column width 80, use spaces to separate
+  code wihtin a line
 
-++ Isn't an array, it's a data frame. This is unlike other slp models,
-   slows things down and will make conversion to C++ harder.
+Best
 
-++ Has the colums in a non-standard order. Hopefully we can fix this
-   without having to re-write the simulation code
+Andy
 
-++ The 'exemplars' output of Kruschke1996Exp1 is also a nice feature,
-   but non-standard for training functions. It'll have to go, I'm
-   afraid.
 
-+ The simulation fo Kruschke 1996:
-
-++ Doesn't use the parameters that Kruschke used in 2003, despite that
-being the simulation you're comparing it to! I'm going for the option
-of using the Kruschke 2001 parameters, as you do, but comparing it to
-the Kruschke 2001 simulation results! (Table 2)
-
-++ Doesn't average across the two instantiations of the design, but
-needs to. For example in your simulation PC.PR is .49 rare for
-instantiation 1, but .61 rare for instantiation 2. The average of
-these is 0.55, which is quite close to 0.582 reported by Kruschke. Not
-close enough, though. Hopefully because...
-
-++ The simulation is far from complete. We need to get the *same*
-numbers as Kruschke (2001), not just similar ones. And that'll require
-simulations averaged across multiple randomized training
-runs. Kruschke (2003) used 40 runs.
-
-** Creating krus96train
-- catlearn style rules - max column width 80, use spaces to separate code wihtin a line 
-
-- trainingitems line can be coded more simply, see code.
 
 
