catlearn 0.5.3 unstable release! Featuring slpEXITsvn st
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/catlearn@376 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/andy_howto.org
+++ b/andy_howto.org
@@ -41,7 +41,11 @@ https://cran.r-project.org/submit.html
 
 * Common warnings
 ** Rd file is non-ascii
-Convert to ascii
+Specifying encoding:
+
+\encoding{UTF-8}
+
+or convert to ascii
 
 iconv -f utf8 -t ascii slpRW.Rd > slpRW.Rd~
 
